updated, summarized the professional experience section

--- a/index.html
+++ b/index.html
@@ -289,52 +289,96 @@
               </ul>
             </div>
             <h3 class="resume-title">Professional Experience</h3>
+
             <div class="resume-item">
-              <h4>Engineering Manager & Associate Software Architect</h4>
-              <h5>July 2022 - Present</h5>
+              <h4>Engineering Lead & Software Architect</h4>
+              <h5>August 2024 - Present</h5>
               <p><em><a href="https://www.linkedin.com/company/sysco/about/" target="_blank">Sysco</a> - United States</em></p>
               <ul>
-                <li>Currently managing & providing technical & architectural leadership for onshore and offshore engineering teams (31 engineers)
+                <li>
+                  Currently providing technical and architectural leadership to onshore and offshore engineering teams (30+ engineers) at Sysco. 
+                </li>
+                <li>
+                  Responsibilities include designing, developing, and supporting a Kafka-based streaming platform, a Java/Node.js services layer, 
+                  and a GraphQL-based orchestration layer, with a focus on three of the most critical domains within Sysco's next-gen e-commerce platform: 
+                  <ul style="margin-left: 40px;">
+                    <li>Ordering</li>
+                    <li>Third-party seller integrations</li>
+                    <li>Specialty company integrations</li>
+                </ul>
+                </li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>Engineering Lead & Associate Software Architect</h4>
+              <h5>July 2022 - July 2024</h5>
+              <p><em><a href="https://www.linkedin.com/company/sysco/about/" target="_blank">Sysco</a> - United States</em></p>
+              <ul>
+                <li>
+                  Provided technical and architectural leadership to onshore and offshore engineering teams (30+ engineers) at Sysco.
+                </li>
+                <li>
+                  Responsibilities included designing, developing, and supporting a Kafka-based streaming platform, a Java/Node.js services layer, 
+                  and a GraphQL-based orchestration layer, for Accounts, Products, Inventory and Personalization domains within Sysco's next-gen e-commerce platform.
+                </li>
+                <!-- <li>Currently managing & providing technical & architectural leadership for onshore and offshore engineering teams (31 engineers)
                   at Sysco, working towards internationalizing Sysco Shop application (process around USD 30B orders) which is the next-gen e-commerce platform for Sysco.</li>
                 <li>Leading the engineering & architectural discussions with Sysco Canada, Sysco speciality companies, and Core Enterprise Teams in internationalizing Sysco Shop application.</li>
                 <li>Leading the personalization initiative in transforming Sysco Shop with personalized content.</li>
                 <li>Providing architectural guidance to the teams on all design and implementation work.</li>
                 <li>Design, develop, manage and support 20+ components, including Kafka-based consumers, Java Spring Boot services, GraphQL, NodeJS, and React components.</li>
-                <li>Manage engineers and teams in the United States, Canada, Sri Lanka and India for multiple major initiatives.</li>
+                <li>Manage engineers and teams in the United States, Canada, Sri Lanka and India for multiple major initiatives.</li> -->
 <!--                <li>Contributed to the recruitment process by conducting 25+ engineering interviews during the past 6 months.</li>-->
 <!--                <li>Conducts bi-weekly one-on-one discussions with each team member and 10+ performance appraisals annually.</li>-->
               </ul>
             </div>
 
             <div class="resume-item">
-              <h4>Engineering Manager & Senior Technical Lead</h4>
-              <h5>December 2021 - June 2022</h5>
+              <h4>Senior Technical Lead</h4>
+              <h5>August 2021 - June 2022</h5>
               <p><em><a href="https://www.linkedin.com/company/sysco/about/" target="_blank">Sysco</a> - United States</em></p>
               <ul>
-                <li>Managed & provided technical & architectural leadership for two engineering teams (total of 21 engineering direct reports) at Sysco, working towards
+                <li>
+                  Provided technical leadership to a team of 8 engineers at Sysco, building a Kafka-based streaming solution to onboard Sysco Canada and 
+                  Sysco's specialty companies to the Sysco Shop application.
+                </li>
+                <!-- <li>Managed & provided technical & architectural leadership for two engineering teams (total of 21 engineering direct reports) at Sysco, working towards
                   internationalizing & personalizing Sysco Shop application (process around USD 30B orders).</li>
                 <li>Designed, developed, managed and supported 15+ components, including Kafka-based consumers, Java Spring Boot services, GraphQL, NodeJS, and React components.</li>                <li>Led the engineering & architectural discussions with Sysco Canada and Core Enterprise Teams in launching Sysco Shop application in Canada.</li>
                 <li>One of the key contributors to the Sysco-Shop platform technical & architectural designs
-                  (designing the graphQL based data orchestration layer, downstream microservices, Shop platform data layer, kafka based consumers).</li>
+                  (designing the graphQL based data orchestration layer, downstream microservices, Shop platform data layer, kafka based consumers).</li> -->
 <!--                <li>Conducted bi-weekly one-on-one discussions with each team member.</li>-->
 <!--                <li>Contributed to the recruitment process by conducting 15+ engineering interviews.</li>-->
               </ul>
             </div>
 
             <div class="resume-item">
-              <h4>Engineering Manager & Senior Technical Lead</h4>
-              <h5>August 2021 - November 2021</h5>
+              <h4>Technical Lead / Associate Technical Lead</h4>
+              <h5>August 2019 - July 2021</h5>
               <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
               <ul>
-                <li>Managed & provided technical & architectural leadership for a team of 11 engineers at Sysco LABS Technologies working towards
+                <li>
+                  Provided technical leadership to a team of 11 engineers in internationalizing the Sysco Delivery application by rolling it out to Canada. 
+                  This was the first multi-country (US & Canada) application developed by Sysco LABS Sri Lanka.
+                </li>
+                <li>
+                  Led the team to improve the accuracy of the Sysco Delivery arrival time prediction engine by 15%-20% while reducing the prediction window size by 20%.
+                </li>
+                <li>
+                  Directly worked with the Vice President – Engineering for Sysco LABS Sri Lanka on a major backend re-architecture (20+ Java/Node.js components) 
+                  for the Sysco Delivery application. 
+                  Evolved the system to process around 320,000 deliveries per minute without any performance issues.
+                </li>
+                <!-- <li>Managed & provided technical & architectural leadership for a team of 11 engineers at Sysco LABS Technologies working towards
                   transforming Sysco Shop application to an e-commerce application as well as Sysco Delivery application feature enhancements.</li>
-                <li>Designed, developed, managed & supported 34 services including Java, NodeJS & Python microservices, react web application & react native mobile application.</li>
+                <li>Designed, developed, managed & supported 34 services including Java, NodeJS & Python microservices, react web application & react native mobile application.</li> -->
                 <!--                <li>Conducted bi-weekly one-on-one discussions with each team member.</li>-->
                 <!--                <li>Contributed to the recruitment process by conducting 15+ engineering interviews.</li>-->
               </ul>
             </div>
 
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Engineering Manager & Technical Lead</h4>
               <h5>September 2020 - July 2021</h5>
               <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
@@ -350,16 +394,20 @@
                   the prediction window size by 20%.</li>
                 <li> Provided technical leadership in transforming Sysco Shop application from an ordering application to a complete e-commerce solution by integrating delivery,
                   invoice, and product information associated with customers active delivery.</li>
-<!--                <li> As a manager facilitated direct report's career growth by creating higher responsibilities/leadership opportunities for 3 engineers while expanding the team from 8-12 members.</li>-->
-<!--                <li> Conducted bi-weekly one-on-one discussions with each team member - discussed issues they are undergoing, discussed training needs and provided career guidance and effective feedback.</li>-->
-<!--                <li> Conducts bi-weekly one-on-one discussions with each team member and 20+ performance appraisals annually.</li> 4 promotion recommendations were provided for year 20/21 and got approved.</li>-->
-<!--                <li> Built/trained a second-level leadership (DEV and QE leads) to make sure once I take up my new role (moving to the United States), the Sysco Delivery team will function without any impact.</li>-->
-<!--                <li> Led the team to become the second runner-up in the 2020 engineering hall of fame awards.</li>-->
-<!--                <li> Provided my contributions to the recruitment process by conducting over 15+ engineering interviews.</li>-->
+                <li>
+                As a manager facilitated direct report's career growth by creating higher responsibilities/leadership opportunities for 3 engineers while expanding the team from 8-12 members.
+                </li>
+                <li> 
+                 Conducted bi-weekly one-on-one discussions with each team member - discussed issues they are undergoing, discussed training needs and provided career guidance and effective feedback.
+                </li>
+               <li> Conducts bi-weekly one-on-one discussions with each team member and 20+ performance appraisals annually. 4 promotion recommendations were provided for year 20/21 and got approved.</li>
+               <li> Built/trained a second-level leadership (DEV and QE leads) to make sure once I take up my new role (moving to the United States), the Sysco Delivery team will function without any impact.</li>
+               <li> Led the team to become the second runner-up in the 2020 engineering hall of fame awards.</li>
+               <li> Provided my contributions to the recruitment process by conducting over 15+ engineering interviews.</li>
               </ul>
-            </div>
+            </div> -->
 
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Engineering Manager & Associate Technical Lead</h4>
               <h5>August 2019 - August 2020</h5>
               <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
@@ -372,17 +420,40 @@
                   and travel time between two locations.</li>
                 <li> As the most experienced engineer, I presented my architectural & technical analysis on the required API(s), and
                   configurations that were necessary to launch Sysco Delivery in Canada.</li>
-<!--                <li> As a manager facilitated career growth by creating higher responsibilities/leadership opportunities for 2 engineers while expanding the team from 6-8 members.</li>-->
+               <li> As a manager facilitated career growth by creating higher responsibilities/leadership opportunities for 2 engineers while expanding the team from 6-8 members.</li>
 
 
-<!--                <li> Conducted bi-weekly one-on-one discussions with each team member - discussed issues they are undergoing, discussed training needs and provided career guidance and effective feedback.</li>-->
-<!--                <li> Conducts bi-weekly one-on-one discussions with each team member and 15+ performance appraisals annually.</li> 3 promotion recommendations were provided for year 19/20 and got approved.</li>-->
-<!--                <li> Led the team to become the first runner-up in the 2019 engineering hall of fame awards.</li>-->
-<!--                <li> Provided my contributions to the recruitment process by conducting over 10+ engineering interviews.</li>-->
+               <li> Conducted bi-weekly one-on-one discussions with each team member - discussed issues they are undergoing, discussed training needs and provided career guidance and effective feedback.</li>
+               <li> Conducts bi-weekly one-on-one discussions with each team member and 15+ performance appraisals annually. 3 promotion recommendations were provided for year 19/20 and got approved.</li>
+               <li> Led the team to become the first runner-up in the 2019 engineering hall of fame awards.</li>
+               <li> Provided my contributions to the recruitment process by conducting over 10+ engineering interviews.</li>
+              </ul>
+            </div> -->
+
+            <div class="resume-item">
+              <h4>Senior Software Engineer / Software Engineer</h4>
+              <h5>April 2017 - July 2019</h5>
+              <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
+              <ul>
+                <li>
+                  Developed the Sysco Delivery application. Served as a key contributor in changing the persistent data storage 
+                  from DynamoDB to MongoDB and implementing several critical functionalities.
+                </li>
+                <li>
+                  Key contributor in building Sysco Commission Calculator and Account Receivable Views for Sysco Shop web application. 
+                  React-based frontend development and Java/Node.js-based backend development.
+                </li>
+                <!-- <li> Designed and developed Sysco Delivery web application. This application tracks over 65,000 deliveries daily.</li>
+                <li> Key contributor on changing Sysco Delivery application's persistent data storage from DynamoDB to MongoDB.</li>
+                <li> Key contributor on transforming the Sysco Delivery application with features beyond delivery tracking.</li>
+                <li> Key contributor on exposing Sysco Delivery APIs to empower 7 different Sysco applications.</li>
+                <li> As a cost-saving initiative worked on optimizing Sysco Delivery AWS and Mongo DB Atlas managed service resources to
+                  save over USD 3000 monthly.</li>
+                <li> Provided effective production support for Sysco Delivery web and mobile applications.</li> -->
               </ul>
             </div>
 
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Senior Software Engineer</h4>
               <h5>December 2018 - July 2019</h5>
               <p><em><a href="https://www.linkedin.com/company/syscolabssl/about/" target="_blank">Sysco LABS Technologies</a> - Sri Lanka</em></p>
@@ -411,7 +482,7 @@
                   Sysco Delivery was the first project to make this move.</li>
                 <li> Provided effective production support for Sysco Shop and Sysco Delivery mobile applications.</li>
               </ul>
-            </div>
+            </div> -->
 
             <div class="resume-item">
               <h4>Software Engineering Intern</h4>
