update research publications

--- a/index.html
+++ b/index.html
@@ -288,6 +288,43 @@
                 <li>pravinda92@gmail.com</li>
               </ul>
             </div>
+
+            <h3 class="resume-title">Education</h3>
+            <div class="resume-item">
+              <h4>MSc by Research in Computer Science & Engineering</h4>
+              <h5>2017 - 2020</h5>
+              <p><em>University of Moratuwa - Sri Lanka</em></p>
+              <!-- <ul>
+                <li> Specialized in Software Architecture.</li>
+              </ul> -->
+            </div>
+            <div class="resume-item">
+              <h4>BSc Engineering (Hons) in Computer Science & Engineering</h4>
+              <h5>2013 - 2017</h5>
+              <p><em>University of Moratuwa - Sri Lanka</em></p>
+              <ul>
+                <li> CGPA: 3.76 (First Class) </li>
+                <li> Admitted to Dean’s list in 4th, 7th & 8th semesters </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Charted Institute of Management Accountants</h4>
+              <h5>2012 - 2016</h5>
+              <p><em>CIMA</em></p>
+              <ul>
+                <li> CIMA Passed Finalist </li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Primary & Secondary Education</h4>
+              <h5>1998 - 2011</h5>
+              <p><em>St.Joseph’s College, Colombo 10</em></p>
+              <ul>
+                <li> GCE Advance Level Examination - 3 ’A’ distinctions | Z score - 2.4684 </li>
+                <li> GCE Ordinary Level Examination - 9 ’A’ distinctions </li>
+              </ul>
+            </div>
+
             <h3 class="resume-title">Professional Experience</h3>
 
             <div class="resume-item">
@@ -496,39 +533,61 @@
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Education</h3>
+            
+            <h3 class="resume-title">Research Publications</h3>
             <div class="resume-item">
-              <h4>MSc. by Research in Computer Science & Engineering</h4>
-              <h5>2017 - 2020</h5>
-              <p><em>University of Moratuwa - Sri Lanka</em></p>
+              <h4>StratGenius: Natural Language Processing-Based System To Determine Effective Influencer Marketing Strategies</h4>
+              <h5>December 2023, United States</h5>
+              <p><em>2023 IEEE 2nd Industrial Electronics Society Conference</em></p>
               <ul>
-                <li> Specialized in Software Architecture.</li>
+                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:LK8CI43ZvvMC" target="_blank">
+                  2023 IEEE 2nd Industrial Electronics Society Conference</a></li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>BSc. Engineering (Hons) in Computer Science & Engineering</h4>
-              <h5>2013 - 2017</h5>
-              <p><em>University of Moratuwa - Sri Lanka</em></p>
+              <h4>The Analyzer: Clustering Based System for Improving Business Productivity by Analyzing User Profiles to Enhance Human-Computer Interaction</h4>
+              <h5>October 23-24, 2023, Houston, United States</h5>
+              <p><em>ICMSCHI 2023: 17th International Conference on Multimedia Systems and Computer-Human Interaction</em></p>
               <ul>
-                <li> CGPA: 3.77 (First Class) </li>
-                <li> Admitted to Dean’s list in 4th, 7th & 8th semesters </li>
+                <li> Published in:<a href="https://publications.waset.org/10013306/pdf" target="_blank">
+                  World Academy of Science, Engineering and Technology International Journal of Computer and Information Engineering Vol:17, No:10, 2023</a></li>
+                <li> Awarded: Best Paper</li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Charted Institute of Management Accountants</h4>
-              <h5>2012 - 2016</h5>
-              <p><em>CIMA</em></p>
+              <h4>TheArchitect: A Serverless-Microservices Based High-level Architecture Generation Tool</h4>
+              <h5>June, 2018, Singapore</h5>
+              <p><em>2018 IEEE/ACIS 17th International Conference on Computer and Information Science (ICIS)</em></p>
               <ul>
-                <li> CIMA Passed Finalist </li>
+                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:U_HPUtbDl20C" target="_blank">
+                  2018 IEEE/ACIS 17th International Conference on Computer and Information Science (ICIS)</a></li>
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Primary & Secondary Education</h4>
-              <h5>1998 - 2011</h5>
-              <p><em>St.Joseph’s College, Colombo 10</em></p>
+              <h4>A Rule-based System for Automated Generation of Serverless-Microservices Architecture</h4>
+              <h5>October 1-3, 2018, Italy</h5>
+              <p><em>2018 IEEE International Systems Engineering Symposium</em></p>
               <ul>
-                <li> GCE Advance Level Examination - 3 ’A’ distinctions | Z score - 2.4684 </li>
-                <li> GCE Ordinary Level Examination - 9 ’A’ distinctions </li>
+                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:LgRImbQfgY4C" target="_blank">
+                  2018 IEEE International Systems Engineering Symposium (ISSE)</a></li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Automated Query Generation for Complex Event Processing: A Shapelets, Parallel Coordinates, and Clustering Based Approach</h4>
+              <h5>July, 2017</h5>
+              <p><em>International Journal of Computing and Digital Systems</em></p>
+              <ul>
+                <li> Published in:<a href="https://pdfs.semanticscholar.org/b0cd/ae061955590d07634a161e838ff30a1aeaf1.pdf" target="_blank">
+                  International Journal of Computing and Digital Systems Vol:6, No:04, 2017</a></li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Shapelets and Parallel Coordinates Based Automated Query Generation for Complex Event Processing</h4>
+              <h5>December 16-18, 2016, Chengdu, China</h5>
+              <p><em>2016 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</em></p>
+              <ul>
+                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:Ade32sEp0pkC" target="_blank">
+                  2016 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</a></li>
               </ul>
             </div>
 
@@ -565,53 +624,7 @@
               <h5>Strategic Thinking</h5>&nbsp;<h5>Adaptability</h5>&nbsp;<h5>Decision-Making</h5>&nbsp;<h5>Empathy & Emotional Intelligence</h5>&nbsp;<h5>Mentoring and Coaching</h5>&nbsp;<h5>Customer Focus</h5>
             </div>
 
-            <h3 class="resume-title">Research Publications</h3>
-            <div class="resume-item">
-              <h4>The Analyzer: Clustering Based System for Improving Business Productivity by Analyzing User Profiles to Enhance Human-Computer Interaction</h4>
-              <h5>October 23-24, 2023, Houston, United States</h5>
-              <p><em>ICMSCHI 2023: 17th International Conference on Multimedia Systems and Computer-Human Interaction</em></p>
-              <ul>
-                <li> Published in:<a href="https://publications.waset.org/10013306/pdf" target="_blank">
-                  World Academy of Science, Engineering and Technology International Journal of Computer and Information Engineering Vol:17, No:10, 2023</a></li>
-                <li> Awarded: Best Paper</li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>TheArchitect: A Serverless-Microservices Based High-level Architecture Generation Tool</h4>
-              <h5>December 6-8, 2018, Singapore</h5>
-              <p><em>2018 IEEE/ACIS 17th International Conference on Computer and Information Science (ICIS)</em></p>
-              <ul>
-                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:U_HPUtbDl20C" target="_blank">
-                  2018 IEEE/ACIS 17th International Conference on Computer and Information Science (ICIS)</a></li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>A Rule-based System for Automated Generation of Serverless-Microservices Architecture</h4>
-              <h5>October 1-3, 2018, Italy</h5>
-              <p><em>2018 IEEE International Systems Engineering Symposium</em></p>
-              <ul>
-                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:LgRImbQfgY4C" target="_blank">
-                  2018 IEEE International Systems Engineering Symposium (ISSE)</a></li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Automated Query Generation for Complex Event Processing: A Shapelets, Parallel Coordinates, and Clustering Based Approach</h4>
-              <h5>July, 2017</h5>
-              <p><em>International Journal of Computing and Digital Systems</em></p>
-              <ul>
-                <li> Published in:<a href="https://pdfs.semanticscholar.org/b0cd/ae061955590d07634a161e838ff30a1aeaf1.pdf" target="_blank">
-                  International Journal of Computing and Digital Systems Vol:6, No:04, 2017</a></li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Shapelets and Parallel Coordinates Based Automated Query Generation for Complex Event Processing</h4>
-              <h5>December 16-18, 2016, Chengdu, China</h5>
-              <p><em>2016 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</em></p>
-              <ul>
-                <li> Published in:<a href="https://scholar.google.com/citations?view_op=view_citation&hl=en&user=L_dO7SQAAAAJ&authuser=1&citation_for_view=L_dO7SQAAAAJ:Ade32sEp0pkC" target="_blank">
-                  2016 IEEE International Conference on Internet of Things (iThings) and IEEE Green Computing and Communications (GreenCom) and IEEE Cyber, Physical and Social Computing (CPSCom) and IEEE Smart Data (SmartData)</a></li>
-              </ul>
-            </div>
+            
 
             <h3 class="resume-title">Awards</h3>
             <div class="resume-item">
